<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>io.quarkiverse.diameter</groupId>
    <artifactId>diameter-parent</artifactId>
    <version>2.0.0</version>
    <packaging>pom</packaging>

    <name>Quarkus :: Diameter :: ${project.artifactId}</name>
    <description>Quarkus Diameter</description>

    <modules>
        <module>core</module>
        <module>diameter-quarkus</module>
        <module>docs</module>
    </modules>

    <properties>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <commons-pool.version>1.6</commons-pool.version>
        <junit.version>5.10.3</junit.version>
        <slf4j.version>2.0.7</slf4j.version>
        <netty.version>4.1.108.Final</netty.version>
        <jakarta.version>4.0.1</jakarta.version>
        <surefire.version>3.2.5</surefire.version>
        <jandex.version>3.1.2</jandex.version>
        <lombok.version>1.18.32</lombok.version>

        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>

        <!-- maven-enforcer-plugin -->
        <maven.min.version>3.8.6</maven.min.version>
        <jdk.min.version>${maven.compiler.source}</jdk.min.version>
        <insecure.repositories>ERROR</insecure.repositories>
    </properties>

    <licenses>
        <license>
            <name>GNU Affero General Public License</name>
            <url>http://www.gnu.org/licenses/agpl.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.diameter</groupId>
                <artifactId>diameter-quarkus</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>enforce-java-version</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <bannedRepositories>
                                    <message>To build this project, don't use maven repositories over HTTP. Please use
                                        HTTPS in your settings.xml or run the build with property
                                        insecure.repositories=WARN
                                    </message>
                                    <level>${insecure.repositories}</level>
                                    <bannedRepositories>
                                        <bannedRepository>http://*</bannedRepository>
                                    </bannedRepositories>
                                    <bannedPluginRepositories>
                                        <bannedPluginRepository>http://*</bannedPluginRepository>
                                    </bannedPluginRepositories>
                                </bannedRepositories>
                                <requireJavaVersion>
                                    <message>To build this project JDK ${jdk.min.version} (or greater) is required.
                                        Please install it.
                                    </message>
                                    <version>${jdk.min.version}</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                    <execution>
                        <id>enforce-maven-version</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <message>To build this project Maven ${maven.min.version} (or greater) is required.
                                        Please install it.
                                    </message>
                                    <version>${maven.min.version}</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>install</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <repositories>
                <repository>
                    <id>Nexus</id>
                    <name>Nexus Group</name>
                    <url>https://nexus.frei.dev/repository/maven-public/</url>
                    <layout>default</layout>
                </repository>
                <repository>
                    <id>repo</id>
                    <name>Dev Repo</name>
                    <url>http://localhost:8046/artifactory/releaserepo/</url>
                    <layout>default</layout>
                </repository>
            </repositories>

            <distributionManagement>
                <repository>
                    <id>repo</id>
                    <name>Release Repo</name>
                    <url>http://localhost:8046/artifactory/releaserepo/</url>
                </repository>
            </distributionManagement>
        </profile>

        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>quicklyDocs</name>
                </property>
            </activation>

            <properties>
                <skipTests>true</skipTests>
                <skipITs>true</skipITs>
                <enforcer.skip>true</enforcer.skip>
                <skipExtensionValidation>true</skipExtensionValidation>
                <skip.gradle.tests>true</skip.gradle.tests>
                <invoker.skip>true</invoker.skip>   <!-- maven-invoker-plugin -->
                <forbiddenapis.skip>true</forbiddenapis.skip> <!-- forbidden-apis maven plugin -->
                <skipCodestartValidation>true</skipCodestartValidation>
                <truststore.skip>true</truststore.skip>
            </properties>

            <repositories>
                <repository>
                    <id>central</id>
                    <name>Maven Central</name>
                    <url>https://repo1.maven.org/maven2/</url>
                    <layout>default</layout>
                </repository>
                <repository>
                    <id>devrepo</id>
                    <name>Dev Repo</name>
                    <url>http://localhost:8046/artifactory/devrepo/</url>
                    <layout>default</layout>
                </repository>
            </repositories>

            <distributionManagement>
                <repository>
                    <id>devrepo</id>
                    <name>Dev Repo</name>
                    <url>http://localhost:8046/artifactory/devrepo/</url>
                    <layout>default</layout>
                </repository>
            </distributionManagement>
        </profile>

        <profile>
            <id>quick-build-docs</id>
            <activation>
                <property>
                    <name>quicklyDocs</name>
                </property>
            </activation>
            <properties>
                <skipTests>true</skipTests>
                <skipITs>true</skipITs>
                <enforcer.skip>true</enforcer.skip>
                <skipExtensionValidation>true</skipExtensionValidation>
                <skip.gradle.tests>true</skip.gradle.tests>
                <invoker.skip>true</invoker.skip>   <!-- maven-invoker-plugin -->
                <forbiddenapis.skip>true</forbiddenapis.skip> <!-- forbidden-apis maven plugin -->
                <skipCodestartValidation>true</skipCodestartValidation>
                <truststore.skip>true</truststore.skip>
            </properties>
            <build>
                <defaultGoal>clean install</defaultGoal>
            </build>
        </profile>
    </profiles>
</project>
